my-apps/development/nginx/httproute.yaml
# File: nginx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: nginx-example
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "nginx.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
